Add the intro details

--- a/packages/blog-starter-kit/themes/personal/package.json
+++ b/packages/blog-starter-kit/themes/personal/package.json
@@ -11,17 +11,20 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.3.6",
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@starter-kit/utils": "workspace:*",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vercel/og": "^0.5.18",
+		"antd": "^5.16.1",
 		"date-fns": "^2.30.0",
 		"graphql-request": "^6.1.0",
 		"gray-matter": "^4.0.3",
 		"html-react-parser": "^4.2.2",
 		"js-cookie": "^3.0.5",
+		"primereact": "^10.6.2",
 		"react-waypoint": "^10.3.0",
 		"remark": "^14.0.2",
 		"remark-html": "^15.0.1",
