--- a/packages/blog-starter-kit/themes/personal/package.json
+++ b/packages/blog-starter-kit/themes/personal/package.json
@@ -25,6 +25,9 @@
 		"html-react-parser": "^4.2.2",
 		"js-cookie": "^3.0.5",
 		"primereact": "^10.6.2",
+		"react-icons": "^5.1.0",
+		"react-photo-view": "^1.2.4",
+		"react-rough-notation": "^1.0.5",
 		"react-waypoint": "^10.3.0",
 		"remark": "^14.0.2",
 		"remark-html": "^15.0.1",
